# concurrency

./: README.md  pyproject.toml
.github/workflows/: black.yml
core/: text.py
trio/: communication.py  long_task_results.py  main.py  performance.py  split_texts.py  two_children.py
