[tool.poetry]
name = "concurrency"
version = "0.1.0"
description = "Researching concurrency tools and patterns"
authors = [ "Benjamin Labrecque" ]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
trio = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.mypy]
files = "testing"
strict = true
namespace_packages = true
explicit_package_bases = true