[tool.poetry]
name = "concurrency"
version = "0.1.0"
description = "Researching concurrency tools and patterns"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "core" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
trio = "^0.22.0"
httpx = "^0.23.3"
pydantic = "^1.10.5"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.2.2"

[tool.mypy]
files = "trio"
strict = true
namespace_packages = true
explicit_package_bases = true
